# Simplex

./: CMakeLists.txt  Common.h  LP.cpp  LP.h  LPInput.cpp  LPInput.h  SimplexMethod.cpp  SimplexMethod.h  lpinput.ui  main.cpp
